Project fp_casemgmt {
  database_type: 'PostgreSQL'
  Note: 'Family Promise Case Management'
}

Table profiles {
  id varchar [primary key]
  name varchar
  email varchar
  role varchar
  created_at datetime // with TZ
}

tablegroup households {
  households
  locations
  clients
  client_notes
  education_histories
  phone_numbers
  email_addresses
  genders
  races
  ethnicities
  finances
  insurance
  documents
  goals
  disabilities
}
  
Table households {
  id bigint [primary key] 
  name varchar //last name?
  times_homeless_in_three_years integer
  total_time_homeless_three_years integer 
  total_time_homeless_past_year integer
  previously_living_in_non_human_habitation boolean
  previously_living_in_emergency_shelter boolean
  previously_unsheltered boolean
  previous_stay_length integer
  needs_interpreter boolean
  access_to_private_transportation boolean
  client_or_family_physical_illness_history varchar
  client_or_family_mental_illness_history varchar
  client_or_family_personal_violence_history varchar
  client_or_family_substance_dependency_history varchar
  cps_involvement boolean
  cps_involvement_active boolean
  dcyf_contact_name varchar
  dcyf_contact_email varchar
  dcyf_contact_phone_number varchar
  section_8_voucher_lost boolean
  created_at datetime // with TZ
}

table locations {
  id uuid
  household_id uuid [ref: > households.id]
  type varchar
  name varchar
  latlong varchar
  address1 varchar
  address2 varchar
  city varchar
  state varchar
  zip varchar
  deleted_at datetime // with TZ
  created_at datetime // with TZ
}

Table clients {
  id uuid [primary key]
  household_id bigint [ref: > households.id]
  first_name varchar
  last_name varchar
  ssn varchar(9) // no dashes
  is_hoh boolean // head of household?
  relation varchar // relation in HOH, child, spouse, grandson
  education_level varchar
  gender_id uuid [ref: > genders.id]
  race_id uuid [ref: > races.id]
  ethnicity_id uuid [ref: > ethnicities.id]
  finances_id uuid [ref: > finances.id]
  insurance_id uuid [ref: > insurance.id]
  documents_id uuid [ref: > documents.id]
  goals_id uuid [ref: > goals.id]
  created_at datetime // with TZ
  disabilities_id uuid [ref: > disabilities.id]
}

table client_notes {
  id uuid [primary key]
  client_id uuid [ref: > clients.id]
  source_view varchar // screen note added from
  message text
  created_by varchar [ref: > profiles.id]
  created_at datetime // with TZ
  deleted_at datetime 
}

table phone_numbers {
  id uuid [primary key]
  client_id uuid [ref: > clients.id]
  number varchar(10) // no markers/dashes
  phone_type varchar
  deleted_at datetime // with TZ
  created_at datetime // with TZ
}

table email_addresses {
  id uuid [primary key]
  client_id uuid [ref: > clients.id]
  email varchar // no markers/dashes
  email_type varchar
  allow_sms boolean
  deleted_at datetime // with TZ
  created_at datetime // with TZ
}

table education_histories {
  id uuid [primary key]
  client_id uuid [ref: > clients.id]
  school_name varchar
  level varchar
  start_date datetime // with TZ
  end_date datetime // with TZ
}

table genders {
  id uuid [primary key]
  name varchar
}

table races {
  id uuid [primary key]
  name varchar
}

table ethnicities {
  id uuid [primary key]
  name varchar
}

table employment_histories {
  id uuid [primary key]
  client_id uuid [ref: > clients.id]
  currently_employed boolean
  skill_certifications varchar
}

table finances {
  id uuid [primary key]
  client_id uuid [ref: > clients.id]
  type_of_debt varchar
  history_of_evictions boolean
  history_of_landlord_debt boolean
  history_of_criminal_activity boolean
  history_of_poor_credit boolean
  rental_history boolean
  amount_of_student_debt money // float 2/currency format
  amount_of_medical_debt money
  amount_of_credit_card_debt money
  amount_of_auto_debt money
}

table insurance {
  id uuid [primary key]
  client_id uuid [ref: > clients.id]
  medicare_number varchar(25)
  medicare_effective_date datetime
  medicaid_number varchar(25)
  medicaid_effective_date datetime
  medicaid_expiration_date datetime
  private_insurance_company varchar
  private_insurance_group_number number
  private_insurance_subscriber_number varchar
  private_insurance_effective_date datetime
  private_insurance_expiration_date datetime
  // employer_occupation varchar // ??
  other_coverage varchar
  other_agencies varchar
}

table documents {
  id uuid [primary key]
  client_id uuid [ref: > clients.id]
  completed_hfca boolean 
  valid_driver boolean
  valid_social boolean
  dshs_wic_tanf_snap boolean
  responsible_renters_course boolean
  birth_cert_for_children boolean
  child_enrolled_school boolean
  childcare boolean
  }

table contact_preferences {
  client_id uuid [ref: > clients.id]
  food_assistance boolean
  clothing_assistance boolean 
  counseling_services boolean 
  addiction_resources boolean 
  mentor_programs boolean
  youth_services boolean
  budgeting boolean 
  can_text_employment_opportunities boolean 
  can_text_apartment_listings boolean 
  can_text_career_fairs boolean
  can_refer_to_partners boolean
}

table references {
  id uuid [primary key]
  client_id uuid [ref: > clients.id]
  name varchar(30) 
  address varchar
  cell varchar
  home varchar
  work varchar
  email varchar(35)
  first_meeting_date datetime
}

table goals {
  id uuid [primary key]
  client_id uuid [ref: > clients.id]
  goal_statement varchar
  goal_steps varchar
  goal_target_date date
  cm_task varchar 
  date_archived timestamp
  notes varchar
  client_strengths varchar
  client_obstacles varchar
  progress_summary varchar
}

table disabilities {
  id uuid [primary key]
  client_id uuid [ref: > clients.id]
  disability varchar
}
